# fandango

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  SECURITY.md  TODO.md  conftest.py  default.fan  dummy.fan  framework.py  grammar.fan  names  names.txt  pylock.toml  pyproject.toml  requirements.txt  setup.py  simple.fan  tcp.fan  test.fan  tmp.der  update_grammar.py
.github/: dependabot.yml
.run/: Template Python tests.run.xml
demo/: 04-coverage.fan  cheat-sheet.md
doc/: Customize.md  Installing.md  Intro.md  Makefile  Specify.md  Test.md  _config.yml  _toc.yml
docs/: .gitignore  About.md  Binary.md  Bits.md  BookIntro.md  Calculator.fan  Commands.md  Constraints.md  Contributing.md  Conversion.md  Converters.md  Customize.md  DNS.md  DerivationTree.md  Distributions.md  Diversity.md  FTP.md  FandangoParty.md  FirstSpec.md  Footer.md  Fuzzing.md  Generators.md  GettingStarted.md  Gif.md  Hatching.md  ISO8601.md  Including.md  Installing.md  Intro.md  Invoking.md  Language.md  LanguageServer.md  Makefile  Markdown.fan  Mp3.md  Outputs.md  Parsing.md  Parties.md  Paths.md  Png.md  (+65 more)
evaluation/: README.md  run_evaluation.py
language/: FandangoLexer.g4  FandangoParser.g4
modules/: extractor.py  optimizer.py  scaffolding.py
scripts/: simple_benchmark.py  update_grammar.py
tests/: conftest.py  test_api.py  test_archive.py  test_benchmarks.py  test_chromosome.py  test_cli.py  test_constraints.py  test_convert.py  test_dynamosa_algorithm.py  test_evaluate_individual.py  test_evaluation.py  test_execution_feedback.py  test_experiments.py  test_meta.py  (+27 more)
(+1320 files in other folders)
