[build-system]
requires = [
    "setuptools>=73.0.1",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fandango"
version = "0.0.1"
description = "Fandango is a fuzzing framework for genetically solving constraints of inputs to generate better test cases that satisfy semantic and syntactical constraints."
readme = "README.md"
license = { file = "COPYING" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "antlr4-python3-runtime>=4.13",
    "matplotlib>=3.9.2",
    "numpy>=2.1.0",
    "deap>=1.4.1",
    "scipy>=1.14.1",
    "ordered-set>=4.0.2",
    "pytest>=8.3.3",
    "Faker>=30.4.0",
    "docutils>=0.21.2",
    "tccbox==2024.7.1",
    "deprecation>=2.1.0",
    "ansi_styles>=0.2.2",
    "cachedir_tag>=0.0.3",
    "xdg-base-dirs>=6.0.2",
    "dill>=0.3.7"
]

[project.urls]
"Homepage" = "https://github.com/fandango-fuzzer/fandango"
"Bug Tracker" = "https://github.com/fandango-fuzzer/fandango/issues"

[project.scripts]
fandango = "fandango.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-rerunfailures>=11.1.2",
    "parameterized>=0.8.1",
]

[tool.black]
line-length = 88
target-version = ['py311']
